[gd_scene load_steps=34 format=3 uid="uid://b0cdb1gdsc558"]

[ext_resource type="Texture2D" uid="uid://crrbx6pd4xype" path="res://Assets/Visuales/gato.jpg" id="1_0mnln"]
[ext_resource type="Script" path="res://Objects/cat.gd" id="1_au8ox"]
[ext_resource type="Texture2D" uid="uid://d13hj7qbl200k" path="res://Assets/Visuales/Gato-Sheet.png" id="2_1wkj1"]
[ext_resource type="AudioStream" uid="uid://dkiovrl1njdrn" path="res://Assets/SFX/gato_idle_1.wav" id="4_uxna5"]
[ext_resource type="AudioStream" uid="uid://cwpe0qw01qj2h" path="res://Assets/SFX/gato_idle_2.wav" id="5_uie1m"]
[ext_resource type="AudioStream" uid="uid://bgnrx8nrx5yyl" path="res://Assets/SFX/gato_idle_3.wav" id="6_s3qyh"]
[ext_resource type="AudioStream" uid="uid://dpb6clmorwkpk" path="res://Assets/SFX/gato_idle_4.wav" id="7_3bxsa"]
[ext_resource type="AudioStream" uid="uid://dbktnc4nm2hte" path="res://Assets/SFX/gato_idle_5.wav" id="8_wvmr8"]
[ext_resource type="AudioStream" uid="uid://bi6y50b32f51p" path="res://Assets/SFX/gato_perro.wav" id="9_00ibq"]
[ext_resource type="AudioStream" uid="uid://bhbeo0dhsimip" path="res://Assets/SFX/gato_hiss_1.wav" id="10_tllaa"]
[ext_resource type="AudioStream" uid="uid://cym1k4xah36g1" path="res://Assets/SFX/gato_hiss_2.wav" id="11_lcwms"]
[ext_resource type="AudioStream" uid="uid://crmtxn0wi6jiy" path="res://Assets/SFX/gato_enojado_1.wav" id="12_rko78"]
[ext_resource type="AudioStream" uid="uid://cl7btc3hoibo" path="res://Assets/SFX/gato_enojado_2.wav" id="13_sq26g"]
[ext_resource type="AudioStream" uid="uid://k4ej1ns75lq1" path="res://Assets/SFX/gato_confundido.wav" id="14_6kxjd"]
[ext_resource type="AudioStream" uid="uid://bb1ku51qc62wa" path="res://Assets/SFX/gato_alerta.wav" id="15_5l0dx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f45nu"]
atlas = ExtResource("2_1wkj1")
region = Rect2(0, 64, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83mad"]
atlas = ExtResource("2_1wkj1")
region = Rect2(0, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muwvq"]
atlas = ExtResource("2_1wkj1")
region = Rect2(56, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxohy"]
atlas = ExtResource("2_1wkj1")
region = Rect2(112, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsxbd"]
atlas = ExtResource("2_1wkj1")
region = Rect2(168, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muc4g"]
atlas = ExtResource("2_1wkj1")
region = Rect2(224, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chv4m"]
atlas = ExtResource("2_1wkj1")
region = Rect2(280, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijyep"]
atlas = ExtResource("2_1wkj1")
region = Rect2(336, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nttp"]
atlas = ExtResource("2_1wkj1")
region = Rect2(392, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeunu"]
atlas = ExtResource("2_1wkj1")
region = Rect2(0, 32, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2udb2"]
atlas = ExtResource("2_1wkj1")
region = Rect2(56, 32, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmr4y"]
atlas = ExtResource("2_1wkj1")
region = Rect2(112, 32, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_km5ow"]
atlas = ExtResource("2_1wkj1")
region = Rect2(168, 32, 56, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uxlqq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f45nu")
}],
"loop": true,
"name": &"Alert",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83mad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muwvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxohy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsxbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muc4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chv4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijyep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nttp")
}],
"loop": true,
"name": &"caminar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeunu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2udb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmr4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km5ow")
}],
"loop": true,
"name": &"correr",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c861p"]
size = Vector2(48, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82wd3"]
size = Vector2(52, 28)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ecno0"]
streams_count = 6
stream_0/stream = ExtResource("4_uxna5")
stream_1/stream = ExtResource("5_uie1m")
stream_2/stream = ExtResource("6_s3qyh")
stream_3/stream = ExtResource("7_3bxsa")
stream_4/stream = ExtResource("8_wvmr8")
stream_5/stream = ExtResource("9_00ibq")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_oy4fa"]
streams_count = 4
stream_0/stream = ExtResource("10_tllaa")
stream_1/stream = ExtResource("11_lcwms")
stream_2/stream = ExtResource("12_rko78")
stream_3/stream = ExtResource("13_sq26g")

[node name="Cat" type="CharacterBody2D"]
collision_mask = 13
script = ExtResource("1_au8ox")
acceleration = 600.0

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uxlqq")
animation = &"Alert"
flip_h = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4.76837e-07, -1.54972e-06)
scale = Vector2(0.0208333, 0.03125)
texture = ExtResource("1_0mnln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 3)
shape = SubResource("RectangleShape2D_c861p")

[node name="VisionCast" type="RayCast2D" parent="."]
collision_mask = 7

[node name="LeftFloorCast" type="RayCast2D" parent="."]
position = Vector2(-28, 15)
collision_mask = 5

[node name="RightFloorCast" type="RayCast2D" parent="."]
position = Vector2(30, 15)
collision_mask = 5

[node name="LeftWallCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="LeftWallCasts"]
position = Vector2(0, -11)
target_position = Vector2(-35, 0)
collision_mask = 13

[node name="RayCast2D2" type="RayCast2D" parent="LeftWallCasts"]
position = Vector2(0, 10)
target_position = Vector2(-35, 0)
collision_mask = 13

[node name="RightWallCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RightWallCasts"]
position = Vector2(0, -11)
target_position = Vector2(35, 0)
collision_mask = 13

[node name="RayCast2D2" type="RayCast2D" parent="RightWallCasts"]
position = Vector2(0, 10)
target_position = Vector2(35, 0)
collision_mask = 13

[node name="ScaleTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(3, 3)
shape = SubResource("RectangleShape2D_82wd3")

[node name="idle_stream" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ecno0")
max_distance = 500.0
bus = &"SFX"

[node name="chase_stream" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_oy4fa")
bus = &"SFX"

[node name="confused_stream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_6kxjd")
bus = &"SFX"

[node name="surprise_stream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_5l0dx")
bus = &"SFX"

[node name="idle_timer" type="Timer" parent="."]
wait_time = 3.25
autostart = true

[node name="chase_timer" type="Timer" parent="."]
autostart = true

[node name="focus_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ScaleTimer" to="." method="_on_scale_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="chase_timer" to="." method="_on_chase_timer_timeout"]
[connection signal="timeout" from="focus_timer" to="." method="_on_focus_timer_timeout"]
